<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Rubrica Password</string>
    
<!--	Activity Primo Accesso	-->
	<string name="firstAccess">Primo Accesso</string>
    <string name="help1">
        Per iniziare inserisci una password. Questa password ti permetterà di controllare l\'intera Rubrica e ti servirà per visualizzare le password degli account che memorizzerai.
   	</string>
    <string name="help2">
        Non aver paura di dimenticare questa password, potrai sempre recuperarla via SMS cliccando sul pulsante \"Recupera Password Sistema\".
    </string>
    <string name="inserisciNumCell">Inserisci il tuo numero di cellulare</string>
    <string name="inserisciPassword">Inserisci Password</string>
    <string name="reinserisciPassword">Reinserisci Password</string>
    
<!--	Activity Rubrica Password	-->
    <string name="visualizzaNomeUtente">Username:</string>
    <string name="visualizzaPassword">Password:</string>
    
<!--    Sub Menu Rubrica Password	-->
    <string name="subMenuModifica">Modifica Password</string>
    <string name="subMenuElimina">Rimuovi Account</string>
    <string name="subMenuPassSistema">Modifica Password Sistema</string>
    <string name="subMenuRecupera">Recupero Password Sistema</string>
    <string name="subMenuBackUp">Back-Up!</string>
    <string name="subMenuRipristina">Ripristina</string>
    <string name="subMenuExit">Esci</string>

<!--	Activity Aggiungi Servizio -->
    <string name="addService">Aggiungi Account</string>
    <string name="tipoServizio">Quale account desideri memorizzare?</string>
    <string name="esTipoServizio">esempio: Gmail, Facebook, Postepay</string>
    <string name="nomeUtente">Username/Email</string>
    <string name="esNomeUtente">esempio: r.mario@live.it, MarioRossi</string>
    <string name="password">Password</string>
    <string name="esPassword">esempio: la password dell\'account</string>
    <string name="hintText">Clicca qui&#8230;</string>
    
<!--     Popup Menu -->
	<string name="popupModifica">Modifica</string>
	<string name="popupElimina">Elimina</string>
	
<!-- 	Dialog accedi	-->
	<string name="msgAccediDialog">Inserisci la password di sistema</string>
	
<!-- 	Dialog modifica password -->
	<string name="msgVecchiaPassDialog">Inserisci la vecchia password</string>
	<string name="msgNuovaPassDialog">Inserisci la nuova password</string>
	<string name="msgReinsPassDialog">Reinserisci la nuova password</string>
	
<!-- 	Dialog recupero password -->
    <string name="ok">OK!</string>
	<string name="recuperoPasswordDescription">E\' stato inviato un SMS contenente la password del sistema al numero</string>
    
	<string name="servizio">Servizio:</string>
	<string name="login">Mostra tutto!</string>
    <string name="annulla">Annulla</string>
    <string name="procedi">Procedi</string>
    <string name="account">Account</string>
    <string name="hidePassword">**********</string>
    <string name="textView">Text View</string>
    <string name="backup">BackUp!</string>
    <string name="backUpRipristino">BackUp/Ripristino</string>
    <string name="imgEmpty">Immagine non trovata</string>
    <string name="textEmpty">Nessun servizio corrispondente trovato.</string>
    <string name="msgEliminaDialog">Sei sicuro di voler eliminare l\'account?</string>
    <string name="msgAttendi">Attendi &#8230;</string>
    <string name="msgBackupDatiInviati">Dati inviati &#8230;</string>
    <string name="msgRipristinoDatiInviati">Dati ricevuti &#8230;</string>
    <string name="msgBackUpErrore">Errore: BackUp non eseguito!</string>
    <string name="msgRipristinoConfirm">Ripristino eseguito correttamente!</string>
    <string name="restore">Ripristino</string>
    
</resources>
