<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="bdsir.passwordaddressbook.PasswordAddressBook" >
    
    <item
        android:id="@+id/subMenuModifica"
        android:title="@string/subMenuModifica" />
    
    <item
        android:id="@+id/subMenuElimina"
        android:title="@string/subMenuElimina" />
    
    <item
        android:id="@+id/subMenuPassSistema"
        android:title="@string/subMenuPassSistema" />
    
    <item
        android:id="@+id/subMenuRecupera"
        android:title="@string/subMenuRecupera" />
    
    <item 
        android:id="@+id/subMenuBackUpRipristino"
        android:title="@string/backUpRipristino">
    	
	    <menu>
	    	<item
	        android:id="@+id/subMenuBackUp"
	        android:title="@string/subMenuBackUp" />
	    	
	    	<item
	        android:id="@+id/subMenuRipristina"
	        android:title="@string/subMenuRipristina" />
	    </menu>
	    
    </item>
    
    <item
        android:id="@+id/subMenuExit"
        android:title="@string/subMenuExit" />

</menu>