<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        style="@style/TextViewPersonal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/msgVecchiaPassDialog"
        android:textSize="@dimen/normalTextSize" />

    <EditText
        android:id="@+id/editVecchiaPass"
        style="@style/EditTextPersonal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/hintText"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <TextView
        style="@style/TextViewPersonal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/msgNuovaPassDialog"
        android:textSize="@dimen/normalTextSize" />

    <EditText
        android:id="@+id/editNuovaPass"
        style="@style/EditTextPersonal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/hintText"
        android:inputType="textPassword" />

    <TextView
        style="@style/TextViewPersonal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/msgReinsPassDialog"
        android:textSize="@dimen/normalTextSize" />

    <EditText
        android:id="@+id/editReinsPass"
        style="@style/EditTextPersonal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:hint="@string/hintText"
        android:inputType="textPassword" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/separatore"
        android:contentDescription="@string/imgEmpty"
        android:src="@drawable/separatore" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp" >

        <Button
            android:id="@+id/buttAnnula"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/background_button"
            android:text="@string/annulla" />

        <Button
            android:id="@+id/buttProcedi"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:background="@drawable/background_button"
            android:text="@string/procedi" />
    </LinearLayout>

</LinearLayout>