<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightTopAppName"
        android:background="@color/backgroundColorSkyBlue"
        android:gravity="center"
        android:text="@string/subMenuModifica"
        android:textSize="@dimen/infoTextSize" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/background_list"
        android:orientation="vertical" >

	        <TextView
	            style="@style/TextViewPersonal"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"
	            android:text="@string/account"
	            android:textSize="@dimen/infoTextSize" />
	
	        <TextView
	            android:id="@+id/textModifyService"
	            style="@style/TextViewPersonal"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"
	            android:text="@string/textView"
	            android:textSize="@dimen/normalTextSize" />
	
	        <ImageView
	            android:layout_width="match_parent"
	            android:layout_height="10dp"
	            android:contentDescription="@string/imgEmpty"
	            android:src="@drawable/separatore" />
	
	        <TextView
	            style="@style/TextViewPersonal"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"
	            android:text="@string/nomeUtente"
	            android:textSize="@dimen/infoTextSize" />
	
	        <TextView
	            android:id="@+id/textModifyUsername"
	            style="@style/TextViewPersonal"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"
	            android:text="@string/textView"
	            android:textSize="@dimen/normalTextSize" />
	
	        <ImageView
	            android:layout_width="match_parent"
	            android:layout_height="10dp"
	            android:contentDescription="@string/imgEmpty"
	            android:src="@drawable/separatore" />
	
	        <TextView
	            style="@style/TextViewPersonal"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"
	            android:text="@string/password"
	            android:textSize="@dimen/infoTextSize" />
	
	        <EditText
	            android:id="@+id/editModifyPassword"
	            style="@style/EditTextPersonal"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginBottom="5dp"
	            android:ems="10"
	            android:hint="@string/hintText" >
	            
	            <requestFocus />
	            
	        </EditText>
	
	    </LinearLayout>
        
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:gravity="center|bottom"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <Button
            android:id="@+id/buttAnnula"
            style="@style/ButtonAnnulla"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/buttProcedi"
            style="@style/ButtonProcedi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:onClick="procedi"
            android:paddingRight="15dp" />
    </LinearLayout>

</LinearLayout>