<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical"
    android:scrollbarStyle="outsideOverlay"
    android:scrollbars="horizontal" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightTopAppName"
        android:background="@color/backgroundColorSkyBlue"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="@dimen/infoTextSize" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_list"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/help1"
                    style="@style/TextViewPersonal"
                    android:layout_margin="1dp"
                    android:gravity="center"
                    android:text="@string/help1"
                    android:textSize="@dimen/normalTextSize" />

                <TextView
                    android:id="@+id/help2"
                    style="@style/TextViewPersonal"
                    android:layout_margin="1dp"
                    android:gravity="center"
                    android:text="@string/help2"
                    android:textSize="@dimen/normalTextSize" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/background_list"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView1"
                    style="@style/TextViewPersonal"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/inserisciNumCell" />

                <EditText
                    android:id="@+id/editNumCell"
                    style="@style/EditTextPersonal"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="5dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/hintText"
                    android:inputType="number" />

                <TextView
                    style="@style/TextViewPersonal"
                    android:gravity="center"
                    android:text="@string/inserisciPassword" />

                <EditText
                    android:id="@+id/editInsPassword"
                    style="@style/EditTextPersonal"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="5dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/hintText"
                    android:inputType="textPassword" />

                <TextView
                    style="@style/TextViewPersonal"
                    android:gravity="center"
                    android:text="@string/reinserisciPassword" />

                <EditText
                    android:id="@+id/editReinsPassword"
                    style="@style/EditTextPersonal"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="5dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/hintText"
                    android:inputType="textPassword" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:paddingBottom="10dp" >

        <Button
            android:id="@+id/buttAnnula"
            style="@style/ButtonAnnulla"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/buttProcedi"
            style="@style/ButtonProcedi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="procedi" />

    </LinearLayout>

</LinearLayout>