<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_img" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/background_list"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                style="@style/TextViewPersonal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipoServizio"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/textModifyService"
                style="@style/TextViewPersonal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="16dp" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:src="@drawable/separatore" />

            <TextView
                android:id="@+id/textView2"
                style="@style/TextViewPersonal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nomeUtente"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/textModifyUsername"
                style="@style/TextViewPersonal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="16dp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:src="@drawable/separatore" />

            <TextView
                android:id="@+id/textView3"
                style="@style/TextViewPersonal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/editModifyPassword"
                style="@style/EditTextPersonal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:ems="10"
                android:hint="@string/hintText" >
                
                <requestFocus />
                
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|bottom"
            android:paddingBottom="10dp" >

            <Button
                android:id="@+id/buttAnnula"
                style="@style/ButtonAnnulla"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/buttProcedi"
                style="@style/ButtonProcedi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="procedi" />
        </LinearLayout>

    </FrameLayout>

</FrameLayout>
